cleaned and fixed timeline on mobile display issue

--- a/css/explore-styles.css
+++ b/css/explore-styles.css
@@ -12774,7 +12774,7 @@ html {
   }
 
   &:hover {
-    width: 30% !important;
+    width: 45% !important;
     
     &:after {
       opacity: 0;
